# geodetic_utils

./: .gitignore  CMakeLists.txt  README.md  Readme.md  package.xml
geodetic_utils/: CMakeLists.txt  README.md  package.xml
geodetic_utils/include/: geodetic_conv.hpp
geodetic_utils/include/geodetic_utils/: geodetic_conv.h  geodetic_conv.hpp  imu_compass_asl.h
geodetic_utils/parameters/: gps_covariances.yaml  gps_pose_covariance.yaml  imu_compass.yaml  vicon_spoofer.yaml
geodetic_utils/src/: euler_radians_to_degrees.py  gps_spoofer.py  gps_spoofer.py.save  gps_to_pose_conversion_node.cpp  imu_compass_asl.cpp  set_gps_reference_node.cpp
geotf/: CMakeLists.txt  Readme.md  package.xml
geotf/include/geotf/: geodetic_converter.h
geotf/launch/: demo.launch
geotf/src/: demo_node.cc  geodetic_converter.cc
geotf/test/: test_axis_swaps.cc
geotf_python/: CMakeLists.txt  README.md  dependencies.rosinstall  package.xml  setup.py
geotf_python/launch/: demo_python.launch  example_mesh_helper.launch
geotf_python/python/geotf/: __init__.py  demo_python_node.py
geotf_python/src/: export_geodetic_converter.cc  module.cc
geotf_python/utils/: mesh_frame_helper.py
gps_sim/: CMakeLists.txt  package.xml
gps_sim/cfg/: gps_sim.cfg
gps_sim/scripts/: GpsNoiser.py  GpsSimulator.py  Magnetometer.py  gps_sim_node.py  plot_tets.py
include/geodetic_utils/: geodetic_conv.hpp  imu_compass_asl.h
launch/: msf_gps_offline.launch
parameters/: imu_compass.yaml  vicon_spoofer.yaml
roscpp_initializer/: CMakeLists.txt  package.xml  setup.py
roscpp_initializer/include/roscpp_initializer/: roscpp_initializer.h
roscpp_initializer/python/roscpp_initializer/: __init__.py
roscpp_initializer/src/: roscpp_initializer.cc  wrap_roscpp_initializer.cc
src/: gps_spoofer.py  gps_to_pose_conversion_node.cpp  imu_compass_asl.cpp  odometry_height_adjuster.py  set_gps_reference_node.cpp
